[workspace]
resolver = "2"
members = [
    "mcap_test_utils",
    "mcap_tools",
]

[workspace.package]
version = "0.16.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.92"
camino = "1.1.7"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["cargo"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.3"
log = "0.4.22"
log-once = "0.4.1"
mcap = { version = "0.17.0", features = ["tokio"] }
memmap = "0.7.0"
nalgebra = "0.33.1"
# ordered-float = "4.4.0"
# rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_rosmsg = "0.2.0"
simple_logger = "5.0.0"
thiserror = "1.0.65"
tokio = "1.39.2"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def_v0_16"
# path = "../../roslibrust/roslibrust"
# version="0.10.2"
features = ["ros1"]

[workspace.dependencies.roslibrust_util]
git = "https://github.com/lucasw/tf_roslibrust"

[workspace.dependencies.tf_roslibrust]
git = "https://github.com/lucasw/tf_roslibrust"
