[package]
name = "mcap_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = "1.39.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.roslibrust]
# git = "https://github.com/Carter12s/roslibrust"
# branch = "master"
path = "../../roslibrust/roslibrust"
# version="0.10.2"
features = ["ros1"]

[dependencies.roslibrust_codegen]
# git = "https://github.com/Carter12s/roslibrust"
# branch = "master"
path = "../../roslibrust/roslibrust_codegen"
# version="0.10"

[dependencies.roslibrust_codegen_macro]
# git = "https://github.com/Carter12s/roslibrust"
# branch = "master"
path = "../../roslibrust/roslibrust_codegen_macro"
# path = "../../../../../other/src/rust/roslibrust/roslibrust_codegen_macro"
# version="0.10"
