[package]
name = "mcap_tools"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
camino = "1.1.7"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["cargo"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
futures-timer = "3.0.3"
log = "0.4.22"
log-once = "0.4.1"
mcap = "0.9.1"
memmap = "0.7.0"
# rand = "0.8.5"
regex = "1.10.6"
serde_rosmsg = "0.2.0"
simple_logger = "5.0.0"
tokio = "1.39.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.roslibrust]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust"
# version="0.10.2"
features = ["ros1"]

[dependencies.roslibrust_codegen]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust_codegen"
# version="0.10"

[dependencies.roslibrust_codegen_macro]
git = "https://github.com/lucasw/roslibrust"
branch = "get_rx_msg_def"
# path = "../../roslibrust/roslibrust_codegen_macro"
# version="0.10"

[[bin]]
name = "rostopic_list"
path = "src/rostopic_list.rs"

[[bin]]
name = "mcap_extract"
path = "src/mcap_extract.rs"

[[bin]]
name = "mcap_intersection"
path = "src/mcap_intersection.rs"


[[bin]]
name = "mcap_play"
path = "src/mcap_play.rs"

[[bin]]
name = "mcap_record"
path = "src/mcap_record.rs"
