[package]
name = "mcap_view"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
mcap.workspace = true
minifb = "0.28.0"
opencv = "0.94.4"
roslibrust_util.workspace = true
serde_rosmsg.workspace = true
simple_logger.workspace = true

[[bin]]
name = "mcap_view"
path = "src/bin/mcap_view.rs"
